--- a/index.html
+++ b/index.html
@@ -169,6 +169,254 @@
 
             <div class="mt-20 text-center animate-on-scroll">
                 <a href="https://wa.me/1234567890" class="config-whatsapp inline-flex items-center gap-3 bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-10 rounded-full shadow-lg shadow-green-500/30 transition transform hover:scale-105 text-lg">
+                    <i class="fa-brands fa-whatsapp text-2xl"></i> Quiero cotizar mi pedido
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Calculadora -->
+    <section id="calculadora" class="py-24 bg-slate-50">
+        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="bg-white rounded-3xl shadow-xl overflow-hidden border border-slate-100">
+                <div class="p-8 md:p-12">
+                    <div class="text-center mb-10">
+                        <h2 class="text-3xl font-bold text-slate-900 mb-4">Calculadora de Precios</h2>
+                        <p class="text-slate-600">Cotiza al instante cuánto pagarías por tus artículos.</p>
+                    </div>
+
+                    <div class="space-y-8">
+                        <div>
+                            <label for="priceInput" class="block text-sm font-medium text-slate-700 mb-2">Precio del artículo (MXN)</label>
+                            <div class="relative rounded-md shadow-sm">
+                                <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+                                    <span class="text-gray-500 sm:text-sm">$</span>
+                                </div>
+                                <input type="number" name="price" id="priceInput" class="block w-full rounded-xl border-slate-300 pl-7 py-4 text-lg focus:border-orange-500 focus:ring-orange-500" placeholder="0.00">
+                            </div>
+                        </div>
+
+                        <div class="grid grid-cols-2 gap-4 p-6 bg-slate-50 rounded-2xl border border-slate-100">
+                            <div>
+                                <p class="text-sm text-slate-500 mb-1">Comisión (20%)</p>
+                                <p class="text-2xl font-bold text-slate-700" id="commissionDisplay">$0.00</p>
+                            </div>
+                            <div>
+                                <p class="text-sm text-slate-500 mb-1">Total Estimado</p>
+                                <p class="text-2xl font-bold text-orange-600" id="totalDisplay">$0.00</p>
+                            </div>
+                        </div>
+
+                        <a href="https://wa.me/1234567890" class="config-whatsapp w-full flex items-center justify-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-xl transition shadow-lg shadow-green-500/20">
+                            <i class="fa-brands fa-whatsapp text-xl"></i> Confirmar este precio
+                        </a>
+                        <p class="text-center text-xs text-slate-400 mt-4">
+                            *El precio final puede variar ligeramente. <a href="terminos.html" class="underline hover:text-slate-600">Ver términos</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonios -->
+    <section class="py-24 bg-orange-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="grid md:grid-cols-2 gap-12 items-center">
+                <div class="animate-on-scroll">
+                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6">Lo que dicen nuestros clientes</h2>
+                    <p class="text-lg text-gray-600 mb-8">
+                        Más de 500 pedidos entregados con éxito en <span class="config-city">[Tu Ciudad]</span>. Tu satisfacción es nuestra prioridad.
+                    </p>
+                    
+                    <div class="space-y-6">
+                        <!-- Review 1 -->
+
+                <!-- Card 3 -->
+                <div class="feature-card p-8 rounded-2xl animate-on-scroll" style="transition-delay: 200ms;">
+                    <div class="w-16 h-16 bg-green-100 text-green-600 rounded-2xl flex items-center justify-center mb-6 text-3xl">
+                        <i class="fa-solid fa-money-bill-wave"></i>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-900 mb-3">Pago Flexible</h3>
+                    <p class="text-gray-600 leading-relaxed">
+                        Solo necesitas el 50% de anticipo para que realicemos tu pedido. El resto lo liquidas al momento de la entrega.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cómo Funciona -->
+    <section id="como-funciona" class="py-24 bg-gray-900 text-white relative overflow-hidden">
+        <!-- Decorative background elements -->
+        <div class="absolute top-0 left-0 w-full h-full overflow-hidden z-0 opacity-20">
+            <div class="absolute top-10 left-10 w-64 h-64 bg-orange-600 rounded-full mix-blend-multiply filter blur-3xl animate-blob"></div>
+            <div class="absolute top-10 right-10 w-64 h-64 bg-purple-600 rounded-full mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000"></div>
+        </div>
+
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
+            <div class="text-center mb-20 animate-on-scroll">
+                <span class="text-indigo-400 font-semibold tracking-wider uppercase text-sm">Proceso Simple</span>
+                <h2 class="text-3xl md:text-5xl font-bold mt-2">Estrena en 3 pasos</h2>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-12 relative">
+                <!-- Connecting Line (Desktop) -->
+                <div class="hidden md:block absolute top-12 left-0 w-full h-0.5 bg-gray-700 -z-10 transform -translate-y-1/2"></div>
+
+                <!-- Step 1 -->
+                <div class="text-center animate-on-scroll group">
+                    <div class="w-24 h-24 mx-auto bg-gray-800 border-4 border-indigo-500 rounded-full flex items-center justify-center text-3xl font-bold mb-6 shadow-lg shadow-orange-500/20 group-hover:scale-110 transition duration-300 relative z-10">
+                        1
+                    </div>
+                    <h3 class="text-2xl font-bold mb-4">Elige tus favoritos</h3>
+                    <p class="text-gray-400 leading-relaxed">
+                        Navega en Shein, Temu o Amazon. Copia los enlaces de lo que te guste o tómales captura de pantalla.
+                    </p>
+                </div>
+
+                <!-- Step 2 -->
+                <div class="text-center animate-on-scroll group" style="transition-delay: 200ms;">
+                    <div class="w-24 h-24 mx-auto bg-gray-800 border-4 border-indigo-500 rounded-full flex items-center justify-center text-3xl font-bold mb-6 shadow-lg shadow-orange-500/20 group-hover:scale-110 transition duration-300 relative z-10">
+                        2
+                    </div>
+                    <h3 class="text-2xl font-bold mb-4">Cotiza y Aparta</h3>
+                    <p class="text-gray-400 leading-relaxed">
+                        Mándanos los links por WhatsApp. Te damos el total y confirmas tu pedido con solo el 50% de anticipo.
+                    </p>
+                </div>
+
+                <!-- Step 3 -->
+                <div class="text-center animate-on-scroll group" style="transition-delay: 400ms;">
+                    <div class="w-24 h-24 mx-auto bg-gray-800 border-4 border-green-500 rounded-full flex items-center justify-center text-3xl font-bold mb-6 shadow-lg shadow-green-500/20 group-hover:scale-110 transition duration-300 relative z-10">
+                        3
+                    </div>
+                    <h3 class="text-2xl font-bold mb-4">Recibe y Estrena</h3>
+                    <p class="text-gray-400 leading-relaxed">
+                        Te avisamos cuando llegue tu paquete. Nos vemos en un punto medio, pagas el resto y ¡listo!
+                    </p>
+                </div>
+            </div>
+
+            <div class="mt-20 text-center animate-on-scroll">
+                <a href="https://wa.me/1234567890" class="config-whatsapp inline-flex items-center gap-3 bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-10 rounded-full shadow-lg shadow-green-500/30 transition transform hover:scale-105 text-lg">
+                    <i class="fa-brands fa-whatsapp text-2xl"></i> Quiero cotizar mi pedido
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Calculadora -->
+    <section id="calculadora" class="py-24 bg-slate-50">
+        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="bg-white rounded-3xl shadow-xl overflow-hidden border border-slate-100">
+                <div class="p-8 md:p-12">
+                    <div class="text-center mb-10">
+                        <h2 class="text-3xl font-bold text-slate-900 mb-4">Calculadora de Precios</h2>
+                        <p class="text-slate-600">Cotiza al instante cuánto pagarías por tus artículos.</p>
+                    </div>
+
+                    <div class="space-y-8">
+                        <div>
+                            <label for="priceInput" class="block text-sm font-medium text-slate-700 mb-2">Precio del artículo (MXN)</label>
+                            <div class="relative rounded-md shadow-sm">
+                                <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+                                    <span class="text-gray-500 sm:text-sm">$</span>
+                                </div>
+                                <input type="number" name="price" id="priceInput" class="block w-full rounded-xl border-slate-300 pl-7 py-4 text-lg focus:border-orange-500 focus:ring-orange-500" placeholder="0.00">
+                            </div>
+                        </div>
+
+                        <div class="grid grid-cols-2 gap-4 p-6 bg-slate-50 rounded-2xl border border-slate-100">
+                            <div>
+                                <p class="text-sm text-slate-500 mb-1">Comisión (20%)</p>
+                                <p class="text-2xl font-bold text-slate-700" id="commissionDisplay">$0.00</p>
+                            </div>
+                            <div>
+                                <p class="text-sm text-slate-500 mb-1">Total Estimado</p>
+                                <p class="text-2xl font-bold text-orange-600" id="totalDisplay">$0.00</p>
+                            </div>
+                        </div>
+
+                        <a href="https://wa.me/1234567890" class="config-whatsapp w-full flex items-center justify-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-xl transition shadow-lg shadow-green-500/20">
+                            <i class="fa-brands fa-whatsapp text-xl"></i> Confirmar este precio
+                        </a>
+                        <p class="text-center text-xs text-slate-400 mt-4">
+                            *El precio final puede variar ligeramente. <a href="terminos.html" class="underline hover:text-slate-600">Ver términos</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonios -->
+    <section class="py-24 bg-orange-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="grid md:grid-cols-2 gap-12 items-center">
+                <div class="animate-on-scroll">
+                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6">Lo que dicen nuestros clientes</h2>
+                    <p class="text-lg text-gray-600 mb-8">
+                        Más de 500 pedidos entregados con éxito en <span class="config-city">[Tu Ciudad]</span>. Tu satisfacción es nuestra prioridad.
+                    </p>
+                    
+                    <div class="space-y-6">
+                        <!-- Review 1 -->
+                        <div class="bg-white p-6 rounded-xl shadow-sm border border-orange-100">
+                            <div class="flex text-yellow-400 mb-2 text-sm">
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                            </div>
+                            <p class="text-gray-700 italic mb-3">"Me daba miedo pedir porque no le sé a la app, pero aquí me ayudaron con todo. Mi ropa llegó perfecto y antes de tiempo."</p>
+                            <div class="flex items-center gap-3">
+                                <div class="w-8 h-8 bg-orange-200 rounded-full flex items-center justify-center text-orange-700 font-bold text-xs">MG</div>
+                                <p class="font-bold text-sm text-gray-900">María González</p>
+                            </div>
+                            <div>
+                                <p class="font-bold text-gray-900">Pedido Entregado</p>
+                                <p class="text-xs text-gray-500">Hace 2 horas</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="space-y-4 animate-on-scroll">
+                    <details class="bg-gray-50 border border-gray-200 rounded-xl p-5 cursor-pointer group transition-all duration-300 hover:bg-white hover:shadow-md">
+                        <summary class="font-semibold text-lg text-gray-800 flex justify-between items-center">
+                            ¿Cuánto cobras de comisión?
+                            <span class="transition-transform duration-300 group-open:rotate-180 text-orange-500"><i class="fa-solid fa-chevron-down"></i></span>
+                        </summary>
+                        <p class="text-gray-600 mt-4 leading-relaxed">
+                            Cobramos una pequeña comisión por gestión dependiendo del monto total de tu pedido. ¡Mándanos un mensaje para cotizarte sin compromiso! A veces tenemos promociones de comisión $0.
+                        </p>
+                    </details>
+
+                    <details class="bg-gray-50 border border-gray-200 rounded-xl p-5 cursor-pointer group transition-all duration-300 hover:bg-white hover:shadow-md">
+                        <summary class="font-semibold text-lg text-gray-800 flex justify-between items-center">
+                            ¿Cuánto tarda en llegar mi pedido?
+                            <span class="transition-transform duration-300 group-open:rotate-180 text-orange-500"><i class="fa-solid fa-chevron-down"></i></span>
+                        </summary>
+                        <p class="text-gray-600 mt-4 leading-relaxed">
+                            El tiempo estándar es de 15 a 20 días hábiles para Shein y Temu. Nosotros te mantenemos informado del estatus de tu paquete en todo momento.
+                        </p>
+                    </details>
+
+                    <details class="bg-gray-50 border border-gray-200 rounded-xl p-5 cursor-pointer group transition-all duration-300 hover:bg-white hover:shadow-md">
+                        <summary class="font-semibold text-lg text-gray-800 flex justify-between items-center">
+                            ¿Qué pasa si la ropa no me queda?
+                            <span class="transition-transform duration-300 group-open:rotate-180 text-orange-500"><i class="fa-solid fa-chevron-down"></i></span>
+                        </summary>
+                        <p class="text-gray-600 mt-4 leading-relaxed">
+                            Te ayudamos a revisar la guía de tallas antes de pedir para minimizar errores. Si algo no te queda, te ayudamos a venderlo en nuestros grupos de clientes, aunque las devoluciones directas dependen de las políticas de cada tienda.
+                        </p>
+                    </details>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Mapa de Zona -->
+    <app-map></app-map>
+
+    <!-- Footer -->
     <app-footer></app-footer>
 
     <!-- WhatsApp Flotante -->
